[package]
name = "integration-ebpf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya-bpf = { path = "../../bpf/aya-bpf" }
aya-log-ebpf = { path = "../../bpf/aya-log-ebpf" }

[[bin]]
name = "log_test"
path = "src/log_test.rs"

[[bin]]
name = "map_test"
path = "src/map_test.rs"

[[bin]]
name = "name_test"
path = "src/name_test.rs"

[[bin]]
name = "pass"
path = "src/pass.rs"

[[bin]]
name = "test"
path = "src/test.rs"